--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ce539317d2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Your Name - CV</title>
     <style>
         body {
             /* Set the background image and adjust other background properties */
-            background-image: url('IMG-20231217-WA0056.jpg');
+            background-image: url('IMG-20231217-WA0058.jpg');
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
@@ -17,7 +18,6 @@
             padding: 0;
             font-family: Arial, sans-serif;
             color: black;
-            image-rendering: auto; /* Optimize image rendering */
         }
 
         /* Additional styles for the toggle button and hidden section */
@@ -67,7 +67,7 @@
     </header>
 
     <!-- Toggle button for about section -->
-    <div class="toggle-button" onclick="toggleContent('about-content')">About</div>
+    <div class="toggle-button" onclick="toggleContent('about-content')">About <i class="fa-solid fa-user"></i></div>
 
     <!-- About Me content section -->
     <section id="about-content" class="toggle-content">
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Toggle button for Experience section -->
-    <div class="toggle-button" onclick="toggleContent('experience')">Experience</div>
+    <div class="toggle-button" onclick="toggleContent('experience')">Experience <i class="fa-solid fa-code"></i></div>
 
     <!-- Experience content section -->
     <section id="experience" class="toggle-content">
@@ -98,7 +98,7 @@
     </section>
 
     <!-- Toggle button for Education section -->
-    <div class="toggle-button" onclick="toggleContent('education')">Education</div>
+    <div class="toggle-button" onclick="toggleContent('education')">Education <i class="fa-solid fa-book"></i></div>
 
     <!-- Education content section -->
     <section id="education" class="toggle-content">
@@ -131,7 +131,7 @@
     </section>
 
     <!-- Toggle button for Skills section -->
-    <div class="toggle-button" onclick="toggleContent('skills')">Skills</div>
+    <div class="toggle-button" onclick="toggleContent('skills')">Skills <i class="fa-solid fa-wrench"></i></div>
 
     <!-- Skills content section -->
     <section id="skills" class="toggle-content">
@@ -149,7 +149,7 @@
     </section>
 
     <!-- Toggle button for Reference section -->
-    <div class="toggle-button" onclick="toggleContent('Reference')">Reference</div>
+    <div class="toggle-button" onclick="toggleContent('Reference')">Reference <i class="fa-solid fa-person-military-to-person"></i></div>
 
     <!-- reference content section -->
     <section id="Reference" class="toggle-content">
@@ -167,7 +167,7 @@
     </section>
 
     <!-- Toggle button for INterests and Hobbies section -->
-    <div class="toggle-button" onclick="toggleContent('Interests & Hobbies')">Interests & Hobbies</div>
+    <div class="toggle-button" onclick="toggleContent('Interests & Hobbies')">Interests & Hobbies <i class="fa-solid fa-medal"></i></div>
 
     <!-- reference content section -->
     <section id="Interests & Hobbies" class="toggle-content">
@@ -181,7 +181,7 @@
     </section>
 
     <!-- Toggle button for INterests and Hobbies section -->
-    <div class="toggle-button" onclick="toggleContent('More')">More</div>
+    <div class="toggle-button" onclick="toggleContent('More')">More <i class="fa-solid fa-circle-info"></i></div>
 
     <!-- reference content section -->
     <section id="More" class="toggle-content">
