--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </section>
 
     <!-- Toggle button for INterests and Hobbies section -->
-    <div class="toggle-button" onclick="toggleContent('Certificates')">Certificates</div>
+    <div class="toggle-button" onclick="toggleContent('Certificates')">Certificates <i class="fa-solid fa-certificate"></i></div>
 
     <!-- reference content section -->
     <section id="Certificates" class="toggle-content">
